# MetasequoiaVoiceInput

./: .clangd  AGENTS.md  CMakeLists.txt  README.md  README.zh-CN.md  vcpkg.json
assets/: config.toml
assets/html/: settings.html  tray_menu.html
assets/models/: README.md
scripts/: prepare_env.py
scripts/config_files/: .clangd  CMakeLists.txt  CMakePresets.json
src/: cue_player.cpp  cue_player.h  main.cpp  mvi_config.cpp  mvi_config.h  mvi_utils.cpp  mvi_utils.h  text_polisher.cpp  text_polisher.h  wave_overlay.cpp  wave_overlay.h  window_webview2.cpp  window_webview2.h
src/resource/: app.rc  resource.h
